# mockingbird

./: .gitignore  Cargo.toml  GAP_ANALYSIS.md  README.md
mockingbird-macros/: Cargo.toml
mockingbird-macros/src/: lib.rs
src/: client.rs  error.rs  lib.rs  main.rs  middleware.rs  mode.rs  request.rs  response.rs
src/cassette/: format.rs  mod.rs  storage.rs  types.rs
src/filter/: mod.rs
src/matcher/: mod.rs
src/proxy/: mod.rs
tests/: cassette_test.rs  client_test.rs  filter_test.rs  integration.rs  matcher_test.rs  proxy_test.rs
